--- a/pages/quiz/quiz.css
+++ b/pages/quiz/quiz.css
@@ -57,15 +57,30 @@ header{
     gap: 16px;
 }
 
-.assunto_ícone{
-    background: var(--bg-acessibilidade);
+.assunto_icone{
     width: 40px;
     height: 40px;
     padding: 5px;
     border-radius: 5px;
 }
 
-.assunto_ícone img{
+.assunto_icone.html {
+    background: var(--bg-html);
+}
+
+.assunto_icone.css {
+    background: var(--bg-css);
+}
+
+.assunto_icone.javascript {
+    background: var(--bg-javascript);
+}
+
+.assunto_icone.acessibilidade {
+    background: var(--bg-acessibilidade);
+}
+
+.assunto_icone img{
     height: 100%;
 }
 
@@ -247,7 +262,7 @@ main{
         margin-inline: auto;
     }
 
-    .assunto_ícone{
+    .assunto_icone{
         width: 56px;
         height: 56px;
         padding: 8px;
