--- a/pages/resultado/resultado.css
+++ b/pages/resultado/resultado.css
@@ -55,7 +55,7 @@ header{
     gap: 16px;
 }
 
-.assunto_ícone{
+.assunto_icone{
     background: var(--bg-acessibilidade);
     width: 40px;
     height: 40px;
@@ -63,7 +63,23 @@ header{
     border-radius: 5px;
 }
 
-.assunto_ícone img{
+.assunto_icone.html {
+    background: var(--bg-html);
+}
+
+.assunto_icone.css {
+    background: var(--bg-css);
+}
+
+.assunto_icone.javascript {
+    background: var(--bg-javascript);
+}
+
+.assunto_icone.acessibilidade {
+    background: var(--bg-acessibilidade);
+}
+
+.assunto_icone img{
     height: 100%;
 }
 
@@ -172,7 +188,7 @@ main button:hover{
         margin-inline: auto;
     }
 
-    .assunto_ícone{
+    .assunto_icone{
         width: 56px;
         height: 56px;
         padding: 8px;
